Bug 136678 - Crash deleting page break
Summary: Crash deleting page break
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
: 136984 (view as bug list)
Depends on:
Blocks: Writer-Page-Break Crash
  Show dependency treegraph
 
Reported: 2020-09-11 18:31 UTC by Telesto
Modified: 2024-04-22 02:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (126.20 KB, application/vnd.oasis.opendocument.text)
2020-09-11 18:31 UTC, Telesto
Details
Bibisect log (2.89 KB, text/plain)
2020-09-12 20:54 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-09-11 18:31:25 UTC
Description:
Crash deleting page break

Steps to Reproduce:
1. open the attached file
2. Go to page 10
3. Hoover over the blue page break bar
4. Delete page break

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: ed4f610f4a3de12016f8308a17b6ad4f86e9d67a
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-09-11 18:31:44 UTC
Created attachment 165402 [details]
Example file
Comment 2 Telesto 2020-09-11 18:33:26 UTC
Still OK in
Version: 6.3.0.0.alpha0+
Build ID: da881f38c088c439f034e340bbbb4ca53e67389f
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 3 Telesto 2020-09-12 20:54:03 UTC
Created attachment 165429 [details]
Bibisect log

Bisected to
author	Ahmed ElShreif <aelshreif7@gmail.com>	2020-08-28 05:35:22 +0200
committer	Ahmed ElShreif <aelshreif7@gmail.com>	2020-09-04 00:58:21 +0200
commit cdb9c24b45ce7c35cf507430bd5ee1d9c3d5ea72 (patch)
tree 84ea10cf5952632356ecddfe389f1656db068173
parent b9e3341178ffe62ab0fc054e7046f124eb975c38 (diff)
uilogger : Add support in the Logger and DSL for MenuBtn
For example the DSL syntax will be:
	>>Open List From menugearbtn
	>>Select item no 6 From List of menugearbtn
	>>Close List From menugearbtn


https://cgit.freedesktop.org/libreoffice/core/commit/?id=cdb9c24b45ce7c35cf507430bd5ee1d9c3d5ea72
Comment 4 Telesto 2020-09-23 19:59:10 UTC
*** Bug 136984 has been marked as a duplicate of this bug. ***
Comment 5 Telesto 2020-09-24 08:52:52 UTC
@Caolan
Not you're bug. But not sure if it's worth pinging Ahmed ElShreif.. And i'm somehow running into this one multiple times. So I would love it seen gone. Currently out of self-interest as it is 7.1 only..  (somehow I tend to trigger this one)

OTOH, must be solved anyhow.. And it has something to do with the 'popup' which makes it kind of VCL ;-). Opportunistic reasoning ;P

Of course, feel free to ignore..
Comment 6 Commit Notification 2020-09-24 12:47:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4e4362daade150f3f34520bd5e6e4673ea88efce

tdf#136678 crash in collectUIInformation

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Telesto 2020-09-24 16:02:55 UTC
Wow; same day delivery ;-). Thanks!

Note: be warned. Take expectation management into account. At some point people expect this being normal. And you get an angry mob if you don't deliver in time :-D.
Comment 8 Xisco Faulí 2020-09-29 11:55:32 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: cd85546a2fbdade42f80fd3b6bd650791db9f32d
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: tr-TR (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!