tdf#136678 crash in collectUIInformation

since...

commit cdb9c24b45ce7c35cf507430bd5ee1d9c3d5ea72
Date:   Fri Aug 28 05:35:22 2020 +0200

Change-Id: I28f621a601daa2ccc6c893561c9de402f22c8657